[gd_scene load_steps=6 format=3 uid="uid://bps65xt3m3qrj"]

[ext_resource type="Script" uid="uid://dyr0fu4x7734x" path="res://Scripts/StartController.gd" id="1_nt0jr"]
[ext_resource type="FontFile" uid="uid://8sb14cf5coaj" path="res://Fonts/AbCave-Oq2O.ttf" id="2_y4ycm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1lxxj"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nt0jr"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_37b1d"]
bg_color = Color(0, 0, 0, 1)

[node name="Start" type="Node2D"]
script = ExtResource("1_nt0jr")

[node name="Panel" type="Panel" parent="."]
offset_left = -27.0
offset_top = -27.0
offset_right = 990.0
offset_bottom = 635.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1lxxj")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 218.0
offset_top = 45.0
offset_right = 750.0
offset_bottom = 127.0
theme_override_fonts/font = ExtResource("2_y4ycm")
theme_override_font_sizes/font_size = 72
text = "Start New Game"

[node name="LineEdit" type="LineEdit" parent="Panel"]
layout_mode = 2
offset_left = 688.0
offset_top = 258.0
offset_right = 792.0
offset_bottom = 301.0
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_nt0jr")
text = "10000"
placeholder_text = "10000"
alignment = 1

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 666.0
offset_top = 260.0
offset_right = 682.0
offset_bottom = 295.0
theme_override_font_sizes/font_size = 25
text = "#"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 352.0
offset_top = 215.0
offset_right = 595.0
offset_bottom = 454.0
theme_override_constants/separation = 10

[node name="StartButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_37b1d")
text = "Start"

[node name="SeedButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_37b1d")
text = "New Seed"

[node name="ReturnButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_37b1d")
text = "Return"

[connection signal="pressed" from="Panel/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/SeedButton" to="." method="_on_seed_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
